fix(dock): truncate label of popover dock items & prevent overflow of label

--- a/src/components/dock/dock-button/dock-button.scss
+++ b/src/components/dock/dock-button/dock-button.scss
@@ -51,7 +51,9 @@
 }
 
 limel-popover {
-    display: grid; // an ugly hack to make buttons that are wrapped in a popover become fullwidth
+    // makes buttons that are wrapped in a popover become fullwidth
+    display: grid;
+    grid-template-columns: 100%;
 }
 
 .text {
